added m more stories

--- a/index.html
+++ b/index.html
@@ -54,6 +54,58 @@
             </a>
 
 
+            <!-- Story Card for La Planta Patricia y la Puerta Misteriosa -->
+            <a href="public/stories/11.html" class="group block bg-white rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 ease-in-out hover:shadow-xl">
+                <div class="relative">
+                    <img src="assets/stories/11/images/1.png" alt="Illustration for La Planta Patricia y la Puerta Misteriosa" class="w-full h-48 object-cover">
+                </div>
+                <div class="p-6">
+                    <h2 class="story-title text-2xl font-bold text-emerald-800 mb-2">La Planta Patricia y la Puerta Misteriosa</h2>
+                    <p class="story-description text-gray-600 leading-relaxed mb-4">Patricia is a small, happy plant. She lives in a beautiful clay pot on a sunny window sill. She loves to feel the sun on her leaves and drink fresh water. Every day is a good day for Patricia.</p>
+                    <span class="font-semibold text-emerald-600 group-hover:underline">Read Story &rarr;</span>
+                </div>
+            </a>
+
+
+            <!-- Story Card for Aníbal y el Misterio del Fin de Semana -->
+            <a href="public/stories/12.html" class="group block bg-white rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 ease-in-out hover:shadow-xl">
+                <div class="relative">
+                    <img src="assets/stories/12/images/1.png" alt="Illustration for Aníbal y el Misterio del Fin de Semana" class="w-full h-48 object-cover">
+                </div>
+                <div class="p-6">
+                    <h2 class="story-title text-2xl font-bold text-emerald-800 mb-2">Aníbal y el Misterio del Fin de Semana</h2>
+                    <p class="story-description text-gray-600 leading-relaxed mb-4">Aníbal the ant is the most organized ant in the entire forest. He loves work. Every day, Aníbal makes lists and plans. "Organization is the most important thing!" he always says. For Aníbal, every minute of the day is for working.</p>
+                    <span class="font-semibold text-emerald-600 group-hover:underline">Read Story &rarr;</span>
+                </div>
+            </a>
+
+
+            <!-- Story Card for El Ratón Ramón y el Otro Ratón -->
+            <a href="public/stories/13.html" class="group block bg-white rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 ease-in-out hover:shadow-xl">
+                <div class="relative">
+                    <img src="assets/stories/13/images/1.png" alt="Illustration for El Ratón Ramón y el Otro Ratón" class="w-full h-48 object-cover">
+                </div>
+                <div class="p-6">
+                    <h2 class="story-title text-2xl font-bold text-emerald-800 mb-2">El Ratón Ramón y el Otro Ratón</h2>
+                    <p class="story-description text-gray-600 leading-relaxed mb-4">Ramón the mouse lives in a very large house. For a little mouse, the house is a huge mansion. Ramón is happy in his mansion, but one day he sees something strange.</p>
+                    <span class="font-semibold text-emerald-600 group-hover:underline">Read Story &rarr;</span>
+                </div>
+            </a>
+
+
+            <!-- Story Card for El Ratón Ramón y el Pirata Inmóvil -->
+            <a href="public/stories/14.html" class="group block bg-white rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 ease-in-out hover:shadow-xl">
+                <div class="relative">
+                    <img src="assets/stories/14/images/1.png" alt="Illustration for El Ratón Ramón y el Pirata Inmóvil" class="w-full h-48 object-cover">
+                </div>
+                <div class="p-6">
+                    <h2 class="story-title text-2xl font-bold text-emerald-800 mb-2">El Ratón Ramón y el Pirata Inmóvil</h2>
+                    <p class="story-description text-gray-600 leading-relaxed mb-4">In a large field of golden corn lived a tiny mouse named Ramón. He was so small and quiet that his footsteps were like a soft breath of wind. Ramón was a very curious mouse who loved to explore.</p>
+                    <span class="font-semibold text-emerald-600 group-hover:underline">Read Story &rarr;</span>
+                </div>
+            </a>
+
+
             <!-- Story Card for Perico y la Conferencia Misteriosa -->
             <a href="public/stories/2.html" class="group block bg-white rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 ease-in-out hover:shadow-xl">
                 <div class="relative">
